k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: os-service
  labels:
    app: os-service
    service: os-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: os-service
